2023-09-06  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (elfextractor): Fix example.

2023-08-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm-alloc.h (GC_THREADS): New cpp define.
	(pvm_alloc_register_thread): Remove `const' qualifier from local var.

2023-08-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-alloc.h: Fix prototypes for
	pvm_alloc_{register,unregister}_thread.

2023-08-24  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/ios.pk: Use "closure" hyperlinks to guarantee that they
	will work ever if another subsequent dump is issued.

2023-08-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.c (hserver_thread_worker): Register/unregister
	listener thread in libpoke.

2023-08-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Prototypes for pk_register_thread and
	pk_unregister_threads.
	* libpoke/libpoke.c (pk_register_thread): New function.
	(pk_unregister_thread): Likewise.
	* libpoke/pvm-alloc.h: Prototypes for pvm_alloc_register_thread
	and pvm_alloc_unregister_thread.
	* libpoke/pvm-alloc.c (pvm_alloc_initialize): Call
	GC_allow_register_threads.
	(pvm_alloc_register_thread): New function.
	(pvm_alloc_unregister_thread): Likewise.
	* libpoke/pvm.h: Prototype for pvm_register_thread and
	pvm_unregister_thread.
	* libpoke/pvm.c (pvm_register_thread): New function.
	(pvm_unregister_thread): Likewise.


2023-08-23  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk (pk_dump_max_line_width): New variable.
	(dump): Pass val and max_line_width.
	Document arguments :val and :max_line_width.
	(dumpval): New function.
	* doc/poke.texi (Information @command{dump} shows): Document dump
	:val.

2023-08-21  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-dark.css (.dump-val1): New class.
	(.dump-val2): Likewise.
	(.dump-val3): Likewise.
	(.dump-val4): Likewise.
	* pickles/ios.pk (ios_dumpval_styles): New global.

2023-08-22  Jose E. Marchesi  <jemarch@gnu.org>
