@@ -2843,13 +2843,8 @@ PKL_PHASE_BEGIN_HANDLER (pkl_gen_pr_trimmer)
       pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_NIP);
       break;
     case PKL_TYPE_ARRAY:
-      {
-        pkl_ast_node array = PKL_AST_TRIMMER_ENTITY (trimmer);
-
-        pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_ATRIM,
-                      PKL_AST_TYPE (array));
-        break;
-      }
+      RAS_MACRO_ATRIM (trimmer_type);
+      break;
     default:
       PK_UNREACHABLE ();
     }
