@@ -593,7 +593,6 @@ PKL_DEF_INSN(PKL_INSN_GCD,"a","gcd")
 
 /* Array macro-instructions.  */
 
-PKL_DEF_INSN(PKL_INSN_ATRIM,"a","atrim")
 PKL_DEF_INSN(PKL_INSN_AIS,"","ais")
 PKL_DEF_INSN(PKL_INSN_ACONC,"","aconc")
 PKL_DEF_INSN(PKL_INSN_AFILL,"","afill")
